# image-compressor

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
demo/: app.py
models/: adaptive_k.pt  refine_centroid.pt
scripts/: plot_results.py  run_evaluation.py
src/: adaptive_k.py  compress.py  features.py  metrics.py  refine_centroid.py
tests/: conftest.py  test_imports.py
